fix: homepage-layout (#104)
* Fixed intro news

* Removed typography override

* Removed class

* Removed extra padding

* Changed layout classes

--- a/src/stylesheets/general/_public-templates.scss
+++ b/src/stylesheets/general/_public-templates.scss
@@ -241,33 +241,6 @@ a.read-more {
     background-size: 100% 300px;
   }
 
-  .card.card-teaser {
-    .card-text {
-      @include font(16, 16);
-      font-weight: 400;
-      line-height: 1.5;
-    }
-
-    h3.card-title {
-      @include font(20, 20);
-      line-height: 1.5;
-
-      &.sito-tematico {
-        @include font(16, 20);
-
-      }
-    }
-
-    .link-list-wrapper ul li a {
-      @include font(16, 16);
-      font-weight: 400;
-
-      span {
-        line-height: 1.7;
-      }
-    }
-  }
-
   .argomenti .chip {
     min-width: unset;
   }
